--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,100..900;1,100..900&display=swap');
+
 
 
 *{
@@ -16,6 +18,7 @@ body {
 }
 
 ::-webkit-scrollbar {
+
     display: none;
 }
 
@@ -35,13 +38,73 @@ header {
     -webkit-backdrop-filter: blur(10px);
 }
 
-.logo {
-    width: 20px;
-    height: auto;
-    vertical-align: middle;
-    margin-right: 15px;
-    color: ;
+.title{
+    margin: 0;
 }
+
+h1{
+    text-align: center;
+    font-size: 5rem;
+    margin: 0;
+    font-family: Tourney;
+    font-weight: 200;
+     text-shadow:
+    0 0 6px rgba(255,255,255,0.9),  
+    0 0 20px rgba(255,255,255,0.15);
+    color: transparent;                 
+    background: linear-gradient(90deg, #a820e7, #f6f3ff, #a820e7);
+    background-clip: text;             
+    -webkit-background-clip: text;      
+    -webkit-font-smoothing: antialiased;
+    transition: text-shadow 200ms ease, transform 200ms ease;
+    cursor: default;
+}
+
+h1:hover {
+    animation: glow 1.5s infinite alternate;
+    transform: scale(1.05);
+    color: #c78ce2;
+}
+
+
+h2 {
+    color: #a820e7;
+    text-align: center;
+    font-size: 2rem;
+    margin: 0 5px 10px 5px;
+    transition: font-style 0.2s ease;
+}
+
+h2:hover{
+    font-style: italic;
+}
+
+.horario {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 50px;
+    font-size: 22px;
+    font-weight: bold;
+    color: rgb(250, 233, 3);
+    Background-color: rgba(0, 0, 0, 0.5);
+    padding: 7px 12px;
+    border-radius: 5px;
+    border: 1px solid rgb(250, 233, 3);
+    transition: 0.2s ease;
+}
+
+.horario:hover {
+    box-shadow:
+        0 0 10px rgb(250, 233, 3),
+        0 0 20px rgba(250, 233, 3, 0.6),
+        inset 0 0 10px rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    scale: 1.05;
+}
+
+/* MAIN */
 
 .abertura, .operacoes, .resultados {
     display: flex;
@@ -55,36 +118,27 @@ header {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px gray;
+    transition: box-shadow 200ms ease, transform 200ms ease, 0.2s ease;
 }
 
-.title{
-    margin: 0;
+.abertura:hover, .operacoes:hover, .resultados:hover {
+    box-shadow:
+        0 0 15px #a820e7,
+        0 0 30px rgba(168, 32, 231, 0.6),
+        inset 0 0 15px rgba(255, 255, 255, 0.1);
+    scale: 1.01;
 }
 
-h1{
-    color: #e9e6f7;
-    text-align: center;
-    font-size: 4rem;
-    margin: 0;
-}
-
-h2 {
-    color: #a820e7;
-    text-align: center;
-    font-size: 2rem;
-    margin: 0 5px 10px 5px;
+.open_account{
+display: flex;
+flex-direction: column;
+align-items: center;
 }
 
 label {
 font-weight: bold;
 margin-top: 10px;
 color: white;
-}
-
-.open_account, .operacoes {
-display: flex;
-flex-direction: column;
-align-items: center;
 }
 
 button, input, select {
@@ -220,18 +274,4 @@ box-shadow: none;
 
 .resultado strong {
     color: #f6f3ff;
-}
-
-.horario {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 50px;
-    font-size: 22px;
-    font-weight: bold;
-    color: rgb(250, 233, 3);
-    Background-color: rgba(0, 0, 0, 0.5);
-    padding: 7px 12px;
-    border-radius: 5px;
-    border: 1px solid rgb(250, 233, 3);
 }
